--- a/FinPlan.Web/Components/Pages/Savings.razor
+++ b/FinPlan.Web/Components/Pages/Savings.razor
@@ -197,8 +197,7 @@
 
 <div class="container-wire">
     <div class="page-header">
-        <h3>Savings</h3>
-        <div class="small-note">Wealth Journey planner wrapped in the drawdown-style chrome</div>
+        <h3>Wealth Building</h3>
     </div>
 
     <div class="top-area">
